--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gamification Platform</title>
+    <!-- Import Montserrat Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Optional: Link global CSS if you have one -->
+    <!-- <link rel="stylesheet" href="/src/index.css" /> -->
   </head>
   <body>
     <div id="root"></div>
